@@ -7,6 +7,18 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2025-05-06 Tue]
+
+** Fixed
+
+*** Resolved issue where search input field could scroll off-screen on iOS devices
+  - The search input in popups (like Search, Task List) will no longer
+    attempt to automatically focus on iOS. This prevents the field
+    from being pushed out of view by the virtual keyboard. iOS users
+    will now need to tap the input to activate it.
+  - On non-iOS platforms, the search input will now auto-focus with a
+    slight delay to improve usability.
+
 * [2025-04-11 Fri]
 
 ** Changed
